# python-with-Fastapi

./: README.md  pyproject.toml
fastapi-01/: pyproject.toml
fastapi-01/todos/: main.py
todos/: main.py
