[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Faheem-saif <faheem000saif@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
